internal/generator/output/interop_array.h

typedef struct {
    void* data;
    int length;
    int elementSize;
} GoArray;
typedef struct {
    uint64_t v0;
    uint64_t v1;
} Language_Region_TLD_Result;
typedef struct {
    uint64_t v0;
    int v1;
} Language_Tag_Base_Result;
typedef struct {
    uint64_t v0;
    bool v1;
} Language_Tag_Extension_Result;
typedef struct {
    GoArray v0;
    uint64_t v1;
} Language_Tag_MarshalText_Result;
typedef struct {
    uint64_t v0;
    uint64_t v1;
    uint64_t v2;
} Language_Tag_Raw_Result;
typedef struct {
    uint64_t v0;
    int v1;
} Language_Tag_Region_Result;
typedef struct {
    uint64_t v0;
    int v1;
} Language_Tag_Script_Result;
typedef struct {
    uint64_t v0;
    uint64_t v1;
} Language_Tag_SetTypeForKey_Result;
typedef struct {
    int v0;
    bool v1;
} Player_Player_Collect_Result;
typedef struct {
    GoArray v0;
    uint64_t v1;
    bool v2;
} Player_Player_DeathPosition_Result;
typedef struct {
    uint64_t v0;
    bool v1;
} Player_Player_Effect_Result;
char* Language_Extension_String(uint64_t self);
GoArray Language_Extension_Tokens(uint64_t self);
uint8_t Language_Extension_Type(uint64_t self);
uint64_t Language_Region_Ctor(void);
uint64_t Language_Region_Canonicalize(uint64_t self);
bool Language_Region_Contains(uint64_t self, uint64_t p1);
char* Language_Region_ISO3(uint64_t self);
bool Language_Region_IsCountry(uint64_t self);
bool Language_Region_IsGroup(uint64_t self);
bool Language_Region_IsPrivateUse(uint64_t self);
int Language_Region_M49(uint64_t self);
char* Language_Region_String(uint64_t self);
Language_Region_TLD_Result Language_Region_TLD(uint64_t self);
uint64_t Language_Script_Ctor(void);
bool Language_Script_IsPrivateUse(uint64_t self);
char* Language_Script_String(uint64_t self);
uint64_t Language_Tag_Ctor(void);
Language_Tag_Base_Result Language_Tag_Base(uint64_t self);
Language_Tag_Extension_Result Language_Tag_Extension(uint64_t self, uint8_t p1);
GoArray Language_Tag_Extensions(uint64_t self);
bool Language_Tag_IsRoot(uint64_t self);
Language_Tag_MarshalText_Result Language_Tag_MarshalText(uint64_t self);
uint64_t Language_Tag_Parent(uint64_t self);
Language_Tag_Raw_Result Language_Tag_Raw(uint64_t self);
Language_Tag_Region_Result Language_Tag_Region(uint64_t self);
Language_Tag_Script_Result Language_Tag_Script(uint64_t self);
Language_Tag_SetTypeForKey_Result Language_Tag_SetTypeForKey(uint64_t self, char* p1, char* p2);
char* Language_Tag_String(uint64_t self);
char* Language_Tag_TypeForKey(uint64_t self, char* p1);
uint64_t Language_Tag_UnmarshalText(uint64_t self, uint64_t p1);
GoArray Language_Tag_Variants(uint64_t self);
uint64_t Language_Variant_Ctor(void);
char* Language_Variant_String(uint64_t self);
uint64_t Player_Config_Ctor(void);
void Player_Config_Apply(uint64_t self, uint64_t p1);
uint64_t Player_Player_Ctor(void);
void Player_Player_AbortBreaking(uint64_t self);
double Player_Player_Absorption(uint64_t self);
void Player_Player_AddDebugShape(uint64_t self, uint64_t p1);
void Player_Player_AddEffect(uint64_t self, uint64_t p1);
int Player_Player_AddExperience(uint64_t self, int p1);
void Player_Player_AddFood(uint64_t self, int p1);
uint64_t Player_Player_Addr(uint64_t self);
int64_t Player_Player_AirSupply(uint64_t self);
uint64_t Player_Player_Armour(uint64_t self);
bool Player_Player_AttackEntity(uint64_t self, uint64_t p1);
bool Player_Player_BeaconAffected(uint64_t self);
void Player_Player_BreakBlock(uint64_t self, uint64_t p1);
bool Player_Player_Breathing(uint64_t self);
void Player_Player_Chat(uint64_t self, uint64_t p1);
uint64_t Player_Player_Close(uint64_t self);
void Player_Player_CloseDialogue(uint64_t self);
void Player_Player_CloseForm(uint64_t self);
Player_Player_Collect_Result Player_Player_Collect(uint64_t self, uint64_t p1);
bool Player_Player_CollectExperience(uint64_t self, int p1);
void Player_Player_ContinueBreaking(uint64_t self, int p1);
bool Player_Player_Crawling(uint64_t self);
uint64_t Player_Player_Data(uint64_t self);
bool Player_Player_Dead(uint64_t self);
Player_Player_DeathPosition_Result Player_Player_DeathPosition(uint64_t self);
char* Player_Player_DeviceID(uint64_t self);
char* Player_Player_DeviceModel(uint64_t self);
void Player_Player_DisableInstantRespawn(uint64_t self);
void Player_Player_Disconnect(uint64_t self, uint64_t p1);
int Player_Player_Drop(uint64_t self, uint64_t p1);
uint64_t Player_Player_EditSign(uint64_t self, uint64_t p1, char* p2, char* p3);
Player_Player_Effect_Result Player_Player_Effect(uint64_t self, uint64_t p1);
GoArray Player_Player_Effects(uint64_t self);
void Player_Player_EnableInstantRespawn(uint64_t self);
int64_t Player_Player_EnchantmentSeed(uint64_t self);
uint64_t Player_Player_EnderChestInventory(uint64_t self);
void Player_Player_ExecuteCommand(uint64_t self, char* p1);
void Player_Player_Exhaust(uint64_t self, double p1);
int Player_Player_Experience(uint64_t self);
int Player_Player_ExperienceLevel(uint64_t self);
double Player_Player_ExperienceProgress(uint64_t self);
void Player_Player_Explode(uint64_t self, uint64_t p1, double p2, uint64_t p3);
void Player_Player_Extinguish(uint64_t self);
double Player_Player_EyeHeight(uint64_t self);