internal/generator/output/interop_bindings.g.cs


    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr Language_Extension_String(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern GoArrayNative Language_Extension_Tokens(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Language_Extension_Type(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Language_Region_Ctor();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Language_Region_Canonicalize(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Language_Region_Contains(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr Language_Region_ISO3(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Language_Region_IsCountry(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Language_Region_IsGroup(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Language_Region_IsPrivateUse(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int Language_Region_M49(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr Language_Region_String(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Language_Region_TLD_Result Language_Region_TLD(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Language_Script_Ctor();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Language_Script_IsPrivateUse(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr Language_Script_String(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Language_Tag_Ctor();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Language_Tag_Base_Result Language_Tag_Base(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Language_Tag_Extension_Result Language_Tag_Extension(ulong self, byte p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern GoArrayNative Language_Tag_Extensions(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Language_Tag_IsRoot(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Language_Tag_MarshalText_Result Language_Tag_MarshalText(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Language_Tag_Parent(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Language_Tag_Raw_Result Language_Tag_Raw(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Language_Tag_Region_Result Language_Tag_Region(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Language_Tag_Script_Result Language_Tag_Script(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Language_Tag_SetTypeForKey_Result Language_Tag_SetTypeForKey(ulong self, IntPtr p1, IntPtr p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr Language_Tag_String(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr Language_Tag_TypeForKey(ulong self, IntPtr p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Language_Tag_UnmarshalText(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern GoArrayNative Language_Tag_Variants(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Language_Variant_Ctor();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr Language_Variant_String(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Player_Config_Ctor();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Config_Apply(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Player_Player_Ctor();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_AbortBreaking(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double Player_Player_Absorption(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_AddDebugShape(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_AddEffect(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int Player_Player_AddExperience(ulong self, int p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_AddFood(ulong self, int p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Player_Player_Addr(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern long Player_Player_AirSupply(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Player_Player_Armour(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Player_Player_AttackEntity(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Player_Player_BeaconAffected(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_BreakBlock(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Player_Player_Breathing(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_Chat(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Player_Player_Close(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_CloseDialogue(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_CloseForm(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Player_Player_Collect_Result Player_Player_Collect(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Player_Player_CollectExperience(ulong self, int p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_ContinueBreaking(ulong self, int p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Player_Player_Crawling(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Player_Player_Data(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Player_Player_Dead(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Player_Player_DeathPosition_Result Player_Player_DeathPosition(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr Player_Player_DeviceID(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr Player_Player_DeviceModel(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_DisableInstantRespawn(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_Disconnect(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int Player_Player_Drop(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Player_Player_EditSign(ulong self, ulong p1, IntPtr p2, IntPtr p3);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Player_Player_Effect_Result Player_Player_Effect(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern GoArrayNative Player_Player_Effects(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_EnableInstantRespawn(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern long Player_Player_EnchantmentSeed(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Player_Player_EnderChestInventory(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_ExecuteCommand(ulong self, IntPtr p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_Exhaust(ulong self, double p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int Player_Player_Experience(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int Player_Player_ExperienceLevel(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double Player_Player_ExperienceProgress(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_Explode(ulong self, ulong p1, double p2, ulong p3);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_Extinguish(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double Player_Player_EyeHeight(ulong self);
